--- a/DapperApp.UI/DapperApp.UI.csproj
+++ b/DapperApp.UI/DapperApp.UI.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\DomeinCore\DomeinCore.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
