--- a/DapperApp.UI/DapperApp.UI.csproj
+++ b/DapperApp.UI/DapperApp.UI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\DomeinCore\DomeinCore.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
