--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -13,4 +13,13 @@
     <ProjectReference Include="..\DomeinCore\DomeinCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="DapperPlus.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="Repository.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
